# django-content-studio

./: .gitignore  README.md  pyproject.toml
content_studio/: __init__.py  admin.py  apps.py  utils.py
frontend/: package-lock.json  package.json
frontend/public/locales/en/: translation.json
frontend/public/locales/nl/: translation.json
frontend/src/: app.tsx  error.tsx  index.css
frontend/src/components/content-editor/: form-field.tsx
frontend/src/components/widgets/: time-widget.tsx
frontend/src/pages/(studio)/(dashboard)/: page.tsx
frontend/src/pages/(studio)/(dashboard)/_components/: activity-log-widget.tsx
frontend/src/pages/(studio)/_components/: tenant-selector.tsx
frontend/src/pages/(studio)/content/[model]/_components/: list-view.tsx
scripts/: test_wrapper.py
tests/: conftest.py  settings.py  test_admin.py  test_models.py  test_sample.py  test_utils.py
